--- a/src/main/webapp/styles/style.css
+++ b/src/main/webapp/styles/style.css
@@ -45,6 +45,7 @@ a {
 }
 
 .requestInput {
+    margin-left: 20px;
     width: 80%;
     height: 38px;
     margin-top: 20px;
@@ -55,6 +56,7 @@ a {
 }
 
 .requestButton {
+    margin-left: 20px;
     margin-top: 25px;
     width: 80%;
     height: 38px;
@@ -80,4 +82,8 @@ a {
     border-color: #918c8c;
     border-width: 1px;
     padding: 3px;
+}
+.str{
+    padding-left: 10px;
+    padding-right: 2px;
 }
